# sshash

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml  codeql.yml
benchmarks/: README.md  download-datasets.sh  print.py  print_csv.py  sshash.canon.bench_log  sshash.canon.build_log  sshash.canon.streaming_query_log  sshash.regular.bench_log  sshash.regular.build_log  sshash.regular.streaming_query_log
benchmarks/results-10-11-25/k31/: canon-bench.json  canon-build.json  canon-streaming-queries-high-hit.json  regular-bench.json  regular-build.json  regular-streaming-queries-high-hit.json
benchmarks/results-10-11-25/k63/: canon-bench.json  canon-build.json  canon-streaming-queries-high-hit.json  regular-bench.json  regular-build.json  regular-streaming-queries-high-hit.json
benchmarks/results-14-09-25/k31/: 14-09-25.canon.bench_log  14-09-25.canon.build_log  14-09-25.canon.high-hit.streaming_query_log  14-09-25.canon.low-hit.streaming_query_log  14-09-25.regular.bench_log  14-09-25.regular.build_log  14-09-25.regular.high-hit.streaming_query_log  14-09-25.regular.low-hit.streaming_query_log
benchmarks/results-14-09-25/k63/: 14-09-25.canon.bench_log  14-09-25.canon.build_log  14-09-25.canon.high-hit.streaming_query_log  14-09-25.canon.low-hit.streaming_query_log  14-09-25.regular.bench_log  14-09-25.regular.build_log  14-09-25.regular.high-hit.streaming_query_log  14-09-25.regular.low-hit.streaming_query_log
benchmarks/results-18-06-25/k31/: 18-06-25.canon.bench_log  18-06-25.canon.build_log  18-06-25.canon.high-hit.streaming_query_log  18-06-25.canon.low-hit.streaming_query_log  18-06-25.regular.bench_log  18-06-25.regular.build_log  18-06-25.regular.high-hit.streaming_query_log  18-06-25.regular.low-hit.streaming_query_log
benchmarks/results-18-06-25/k63/: 18-06-25.canon.bench_log  18-06-25.canon.build_log  18-06-25.canon.high-hit.streaming_query_log  18-06-25.canon.low-hit.streaming_query_log  18-06-25.regular.bench_log  18-06-25.regular.build_log  18-06-25.regular.high-hit.streaming_query_log  18-06-25.regular.low-hit.streaming_query_log
benchmarks/results-20-03-26-streaming-low-hit/k31/: canon-streaming-queries.json  regular-streaming-queries.json
benchmarks/results-20-03-26-streaming-low-hit/k63/: canon-streaming-queries.json  regular-streaming-queries.json
benchmarks/results-21-01-26/k31/: canon-bench.json  canon-streaming-queries-high-hit.json  regular-bench.json  regular-streaming-queries-high-hit.json
benchmarks/results-21-01-26/k63/: canon-bench.json  canon-streaming-queries-high-hit.json  regular-bench.json  regular-streaming-queries-high-hit.json
benchmarks/results-22-08-25/k31/: 22-08-25.canon.bench_log  22-08-25.canon.build_log  22-08-25.canon.high-hit.streaming_query_log  22-08-25.canon.low-hit.streaming_query_log  22-08-25.regular.bench_log  22-08-25.regular.build_log  22-08-25.regular.high-hit.streaming_query_log  22-08-25.regular.low-hit.streaming_query_log
benchmarks/results-22-08-25/k63/: 22-08-25.canon.bench_log  22-08-25.canon.build_log  22-08-25.canon.high-hit.streaming_query_log  22-08-25.canon.low-hit.streaming_query_log  22-08-25.regular.bench_log  22-08-25.regular.build_log  22-08-25.regular.high-hit.streaming_query_log  22-08-25.regular.low-hit.streaming_query_log
benchmarks/results-22-09-25/k31/: 22-09-25.canon.bench_log  22-09-25.canon.build_log  22-09-25.canon.high-hit.streaming_query_log  22-09-25.canon.low-hit.streaming_query_log  22-09-25.regular.bench_log  22-09-25.regular.build_log  22-09-25.regular.high-hit.streaming_query_log  22-09-25.regular.low-hit.streaming_query_log
include/: abundances.hpp  bit_vector_iterator.hpp  bitpack.hpp  buckets.hpp  buckets_statistics.hpp  constants.hpp  cover.hpp  dictionary.cpp  dictionary.hpp  dictionary.impl  dictionary_types.hpp  dump.cpp  dump.impl  ef_sequence.hpp  endpoints.hpp  hash_util.hpp  info.cpp  info.impl  kmer.hpp  kmer_iterator.hpp  lookup.cpp  minimizer_enumerator.hpp  minimizer_iterator.hpp  minimizers.hpp  minimizers_control_map.hpp  offsets.hpp  print_info.cpp  skew_index.hpp  sparse_and_skew_index.hpp  spectrum_preserving_string_set.hpp  statistics.cpp  statistics.impl  streaming_query.hpp  util.hpp  weights.hpp
include/builder/: build.cpp  build.impl  build_index.cpp  build_index.hpp  build_skew_index.cpp  build_skew_index.hpp  build_sparse_and_skew_index.cpp  build_sparse_and_skew_index.hpp  build_sparse_index.hpp  build_util_types.hpp  compute_minimizer_tuples.cpp  cover.hpp  dictionary_builder.hpp  file_merging_iterator.hpp  parallel_sort.hpp  parse_file.cpp  parse_file.hpp  util.hpp
include/cover/: cover.hpp  even_frequency_weights.hpp  node.hpp  parse_file.hpp
include/gz/: zip_stream.cpp  zip_stream.hpp
include/query/: membership_query.hpp  membership_query_canonical_parsing.cpp  membership_query_canonical_parsing.hpp  membership_query_regular_parsing.cpp  membership_query_regular_parsing.hpp  streaming_query.hpp  streaming_query_canonical.hpp  streaming_query_canonical_parsing.hpp  streaming_query_regular.hpp  streaming_query_regular_parsing.hpp
script/: bench.py  bench.sh  benchmark_dictionary.sh  build.py  build.sh  create_release.sh  download_and_preprocess_datasets.sh  mix_fastq_files.py  plot-trade-off-l.py  plot-trade-off-m.py  rss_anon.py  streaming-query-high-hit.py  streaming-query-high-hit.sh  streaming-query.py  streaming_query.sh  sweep-m.py  sweep-min-l.py
script-v2/: bench.sh  download-datasets.sh  streaming-query-low-hit.sh  streaming_query-v2-high-hit.sh
src/: bench.cpp  bench_utils.hpp  build.cpp  check.cpp  check_utils.hpp  common.hpp  dictionary.cpp  dump.cpp  info.cpp  permute.cpp  permute.hpp  query.cpp  sshash.cpp  statistics.cpp
src/builder/: build.cpp  build_sparse_and_skew_index.cpp  compute_minimizer_tuples.cpp  encode_strings.cpp
test/: check.cpp  check.hpp  check_from_file.hpp  test_alphabet.cpp
tools/: bench_utils.hpp  build.cpp  check_utils.hpp  common.hpp  perf.hpp  permute.cpp  query.cpp  sort.cpp  sshash.cpp
(+98 files in other folders)
